# cli-multi-agent

./: .gitignore  CLAUDE.md  CODEOWNERS.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/agents/: claude-quality-reviewer.md  code-reviewer.md
.claude/skills/accessibility-audit/: SKILL.md
.claude/skills/code-onboarding/: SKILL.md
.claude/skills/commit-message/: SKILL.md
.claude/skills/pr-review/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  repository_audit.yml
.github/workflows/: python-app.yml
.output/: report.md
.repo-audit/: report.md
.report/: report.md
reporting/: report.md
reports/: report.md
src/application/: audit_service.py
src/domain/: models.py
src/orchestrator/: __main__.py  bootstrap.py  cli.py
src/orchestrator/agents/: orchestrator.py  product_owner.py  registry.py  specialist.py
src/orchestrator/application/: audit_service.py  progress.py
src/orchestrator/config/: settings.py
src/orchestrator/context/: context_builder.py
src/orchestrator/discovery/: repository_scanner.py  repository_source.py  stack_detector.py
src/orchestrator/domain/: enums.py  models.py
src/orchestrator/plugins/: base.py  registry.py
src/orchestrator/plugins/builtins/: angular.py  django.py  fastapi.py  react.py  vue.py
src/orchestrator/providers/: mistral.py
src/orchestrator/reports/: json.py  mardown.py  sarif.py
src/providers/: base.py  mistral.py
src/repo_audit/: cli.py
tests/: test_cli.py
