[project]
name = "orchestrator"
version = "0.1.0"
description = "CLI multi-agent pour auditer des repos"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mistralai",
    "pydantic>=2",
    "pydantic-settings",
    "pyyaml",
    "rich",
    "typer",
]

[project.scripts]
repo-audit = "orchestrator.cli:app"

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
strict = true
